src/objects/Xero_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Agecny__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Xero Invoices</relationshipLabel>
        <relationshipName>Xero_Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Billing_Run__c</fullName>
        <label>Agency Billing Run</label>
        <referenceTo>Agency_Billing_Run__c</referenceTo>
        <relationshipLabel>Xero Invoices</relationshipLabel>
        <relationshipName>Xero_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Xero_Invoice_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Xero_Invoice_Line__c.Xero_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoices_Lines__c</fullName>
        <label>Invoices Lines</label>
        <summaryForeignKey>Xero_Invoice_Line__c.Xero_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Xero_ID__c</fullName>
        <externalId>true</externalId>
        <label>Xero ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Xero Invoice</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Xero Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>